pod-security-cel/baseline/restrict-sysctls/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
    - name: net.ipv4.ip_local_port_range
      value: "5000-6000"
    - name: net.ipv4.ip_unprivileged_port_start
      value: "60000"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1000-2000"
  containers:
  - name: busybox01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_port_range
      value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
