pod-security-cel/baseline/restrict-sysctls/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-sysctls
status:
  ready: true
