pod-security-cel/baseline/restrict-sysctls/.chainsaw-test/vap-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-sysctls
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-sysctls
spec:
  failurePolicy: Fail
